[gd_scene load_steps=3 format=3 uid="uid://bx2cn1eitljm"]

[ext_resource type="Script" path="res://item_button.gd" id="1_ugtpc"]
[ext_resource type="Texture2D" uid="uid://ccl0k1gp2oksx" path="res://kenney_conveyor-kit/Previews/cover-corner.png" id="2_q727p"]

[node name="Button" type="Button"]
self_modulate = Color(1, 1, 1, 0.0980392)
custom_minimum_size = Vector2(190, 190)
offset_right = 195.0
offset_bottom = 180.0
mouse_filter = 1
script = ExtResource("1_ugtpc")
item_name = "Conveyor"
item_description = "[center]Moves the item on it to the  [b]next tile[/b].
[/center]
"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(190, 190)
layout_mode = 0
offset_right = 190.0
offset_bottom = 190.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_q727p")
stretch_mode = 3

[node name="ItemName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Conveyor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemDesc" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 15
bbcode_enabled = true
text = "[center]Moves the item on it to the  [b]next tile[/b].[/center]
"
fit_content = true

[node name="ItemPrice" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lock" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "ðŸ”’"
horizontal_alignment = 1
vertical_alignment = 1
